[FIX] SSL cert from dev

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -9,4 +9,6 @@ MYSQL_ROOT_PASSWORD=changeme1234
 # --------------------------------------------
 # REQUIRED: PHP MyAdmin
 # --------------------------------------------
-PMA_PORT=3307
+PMA_HOST=mariadb
+PMA_PORT=3306
+PMA_FORCE_SSL=false
