[CHANGE] db to postgress

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,14 +1,13 @@
 # --------------------------------------------
 # REQUIRED: DB SETUP
 # --------------------------------------------
-MYSQL_DATABASE=inventario
-MYSQL_USER=root
+POSTGRES_DB=inventario
+POSTGRES_USER=root
 MYSQL_PASSWORD=changeme1234
-MYSQL_ROOT_PASSWORD=changeme1234
+POSTGRES_PASSWORD=changeme1234
 
 # --------------------------------------------
-# REQUIRED: PHP MyAdmin
+# REQUIRED: pg Admin
 # --------------------------------------------
-PMA_HOST=mariadb
-PMA_PORT=3306
-PMA_FORCE_SSL=false
+PGADMIN_DEFAULT_EMAIL=admin@mail.com
+PGADMIN_DEFAULT_PASSWORD=root
